<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/item_my_therapist"
            android:icon="@drawable/ic_doctor"
            android:title="@string/title_my_therapist"
            />


        <item
            android:id="@+id/item_make_appointment"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/menu_make_appointment"
            />

        <item
            android:id="@+id/item_profile_patient"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile_patient"
            />
        <item
            android:id="@+id/item_log_out"
            android:title="@string/menu_log_out" />

    </group>
</menu>