<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/item_location_patient"
            android:icon="@drawable/ic_person_location"
            android:title="@string/menu_map_patient"
            />

        <item
            android:id="@+id/item_shedule_therapist"
            android:icon="@drawable/ic_event_note"
            android:title="@string/schedule_therapy"
            />

        <item
            android:id="@+id/item_profile_therapist"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile_therapist"
            />
        <item
            android:id="@+id/item_log_out"
            android:title="@string/menu_log_out" />
    </group>
</menu>